// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-weather Renders \`service-weather\` with default props 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <!---->
    <div
      class="flex xs5"
    >
      <div
        class="layout align-center"
      >
        <!---->
        <c-enabled-field-stub
          class="ml-3"
          label="Hide gray"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="layout fill-height wrap"
  >
    <div
      class="layout justify-center"
    >
      <!---->
      <div
        class="v-alert v-sheet theme--dark info"
        role="alert"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            info
          </i>
          <div
            class="v-alert__content"
          >
        No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`service-weather Renders \`service-weather\` with default props 2`] = `undefined`;

exports[`service-weather Renders \`service-weather\` with errors 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <!---->
    <div
      class="flex xs5"
    >
      <div
        class="layout align-center"
      >
        <!---->
        <c-enabled-field-stub
          class="ml-3"
          label="Hide gray"
        />
      </div>
    </div>
  </div>
  <!---->
  <div
    class="layout fill-height wrap"
  >
    <div
      class="layout justify-center"
    >
      <div
        class="v-alert v-sheet theme--dark error"
        role="alert"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            warning
          </i>
          <div
            class="v-alert__content"
          >
            <div
              class="layout align-center"
            >
              <div
                class="mr-4"
              >
            Something went wrong...
              </div>
              <c-help-icon-stub
                icon="help"
                top=""
              >
                <div>
              Name: Service name error
                </div>
                <div>
              Description: Service description error
                </div>
              </c-help-icon-stub>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-alert v-sheet theme--dark info"
        role="alert"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            info
          </i>
          <div
            class="v-alert__content"
          >
        No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`service-weather Renders \`service-weather\` with errors 2`] = `undefined`;

exports[`service-weather Renders \`service-weather\` with full access 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <div
      class="flex xs3"
    >
      <c-entity-category-field-stub
        class="mr-3"
      />
    </div>
    <div
      class="flex xs5"
    >
      <div
        class="layout align-center"
      >
        <filter-selector-stub
          clearable="true"
          disabled="true"
          filters=""
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <filters-list-btn-stub
          addable="true"
          editable="true"
          entitycounterstype="true"
          entitytypes="service"
          private="true"
          widgetid="service-weather-widget-id"
          withentity="true"
          withserviceweather="true"
        />
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div
    class="layout fill-height wrap"
  >
    <div
      class="flex xs6"
    >
      <service-weather-item-stub
        actionrequiredblinking="true"
        counterssettings="[object Object]"
        heightfactor="0"
        margin="[object Object]"
        priorityenabled="true"
        service="[object Object]"
        showrootcausebystateclick="true"
        template=""
      />
    </div>
  </div>
</div>
`;

exports[`service-weather Renders \`service-weather\` with full access 2`] = `undefined`;
